Revise index.html for AI Research Portfolio
Updated the HTML structure and content for the AI Research Portfolio, including changes to the header, education section, and footer.

--- a/index.html
+++ b/index.html
@@ -3,23 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>장규식 | Research Portfolio</title>
+    <title>장규식 | AI Research Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/your-code.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
     <header>
         <div class="container">
             <h1>장규식 (Kyusik Jang)</h1>
-            <p>AI Research & Natural Language Processing</p>
+            <p>AI / ML Engineer (NLP & Deep Learning)</p>
+            <div class="contact-info">
+                <span>📧 jks4880@naver.com</span> | 
+                <span>📱 010-8635-5292</span> | 
+                <span>🔗 <a href="https://github.com/hellemon" target="_blank">github.com/hellemon</a></span>
+            </div>
         </div>
     </header>
 
     <main class="container">
-        <section id="about">
-            <h2>About Me</h2>
-            <p>대규모 언어 모델(LLM)의 환각 완화, Contrastive Decoding, In-Context Learning 등 NLP 전반을 연구하고 있습니다.</p>
+        <section id="education">
+            <h2>Education</h2>
+            <div class="edu-item">
+                <div class="edu-header">
+                    <strong>전북대학교 대학원</strong>
+                    <span>2024.09 ~ 2026.02 (졸업예정)</span>
+                </div>
+                <p>전자정보공학부 컴퓨터공학전공 (석사과정) | 학점 4.45 / 4.5</p>
+            </div>
+            <div class="edu-item">
+                <div class="edu-header">
+                    <strong>전북대학교 (전주)</strong>
+                    <span>2018.03 ~ 2024.08 (졸업)</span>
+                </div>
+                <p>컴퓨터공학부 학사 | 학점 4.07 / 4.5</p>
+            </div>
+        </section>
+
+        <section id="skills">
+            <h2>Technical Skills</h2>
+            <p><strong>Languages & Frameworks:</strong> Python, Pytorch, CUDA</p>
+            <p><strong>Research Interests:</strong> 자연어처리(NLP), 대형 언어 모델(LLM) 환각 완화, Contrastive Decoding</p>
         </section>
 
         <section id="publications">
@@ -70,7 +95,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2026 Kyusik Jang. Built with GitHub Pages.</p>
+        <p>&copy; 2026 Kyusik Jang. Powered by GitHub Pages.</p>
     </footer>
 
 </body>
