--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>장규식 | AI Research Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/your-code.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
@@ -17,7 +16,7 @@
             <div class="contact-info">
                 <span>📧 jks4880@naver.com</span> | 
                 <span>📱 010-8635-5292</span> | 
-                <span>🔗 <a href="https://github.com/hellemon" target="_blank">github.com/hellemon</a></span>
+                <span>🔗 <a href="https://github.com/hellemon" target="_blank">GitHub</a></span>
             </div>
         </div>
     </header>
@@ -42,9 +41,29 @@
         </section>
 
         <section id="skills">
-            <h2>Technical Skills</h2>
-            <p><strong>Languages & Frameworks:</strong> Python, Pytorch, CUDA</p>
-            <p><strong>Research Interests:</strong> 자연어처리(NLP), 대형 언어 모델(LLM) 환각 완화, Contrastive Decoding</p>
+            <h2>Core Competencies</h2>
+            <div class="skill-grid">
+                <div class="skill-item">
+                    <strong>Research Focus</strong>
+                    <p>Hallucination Mitigation, In-Context Learning, Contrastive Decoding</p>
+                </div>
+                <div class="skill-item">
+                    <strong>Technical Skills</strong>
+                    <p>Python, PyTorch, CUDA, NLP, LLM Fine-tuning</p>
+                </div>
+            </div>
+        </section>
+
+        <section id="awards">
+            <h2>Awards</h2>
+            <div class="award-item">
+                <div class="edu-header">
+                    <strong>우수 발표상</strong>
+                    <span>2023.12</span>
+                </div>
+                <p>2023 한국소프트웨어종합학술대회 (KSC2023)</p>
+                <p class="award-desc">"한국어 대규모언어모델을 활용한 MMR기반 자가생성 In-Context Learning" 연구의 우수성을 인정받아 수상</p>
+            </div>
         </section>
 
         <section id="publications">
@@ -74,10 +93,9 @@
                         <p class="venue">한국 정보과학회 학술발표논문집 (KCC2024)</p>
                     </div>
                 </li>
-                <li>
-                    <span class="date">2023.12</span>
+                <li class="highlight-pub"> <span class="date">2023.12</span>
                     <div class="pub-content">
-                        <strong>한국어 대규모언어모델을 활용한 MMR기반 자가생성 In-Context Learning</strong>
+                        <strong><span class="award-badge">🏆 우수 발표상</span> 한국어 대규모언어모델을 활용한 MMR기반 자가생성 In-Context Learning</strong>
                         <p>장규식, 나승훈, 임준호, 김태형, 류휘정, 장두성</p>
                         <p class="venue">2023 한국소프트웨어종합학술대회 (KSC2023)</p>
                     </div>
