Fix HTML formatting and update contact details

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <div class="container">
-            <h1>장규식 (Kyusik Jang)</h1>
+            <h1>장규식 (Gyusik Jang)</h1>
             <p>AI / ML Engineer (NLP & Deep Learning)</p>
             <div class="contact-info">
                 <span>📧 jks4880@naver.com</span> | 
@@ -118,3 +118,4 @@
 
 </body>
 </html>
+
